--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 10vh;
+  background: rgb(73, 79, 82);
+  color: white !important;
+  text-decoration: none !important;
+}
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +43,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
